crates/toml_edit/fixtures/invalid/table/nested-brackets-close.stderr
TOML parse error at line 1, column 4
  |
1 | [a]b]
  |    ^
Invalid table header
Expected newline, `#`
